@@ -9,6 +9,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -29,7 +30,7 @@ public class TagService {
     public List<TagDTO> getAllTags() {
         return tagRepository.findAll().stream()
                 .map(tagMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public void addTag(TagDTO tagDTO) {
